Se hace el registro de un nodo en memoria

--- a/proyecto/templates/proyecto/registro.html
+++ b/proyecto/templates/proyecto/registro.html
@@ -13,7 +13,7 @@
 	</script>
 	<div class="row" >
 		<div class="span5" >
-			<form method="post" action="terminar/">{% csrf_token %}
+			<form method="post" action="/terminar/">{% csrf_token %}
 			
 				<p>Nombre de la ciudad</p> <input name="nombre" type="text" placeholder="nombre" style="height:40px;"><br/>
 				coordenada x: <input type="text" id ="cordX" name="cordX" /><br/>
